--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.2",
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-clipboard/clipboard": "^1.10.0",
     "@react-navigation/bottom-tabs": "^6.0.5",
+    "@react-navigation/material-top-tabs": "^6.2.2",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
     "expo": "~45.0.0",
     "expo-app-loading": "^2.0.0",
     "expo-asset": "~8.5.0",
+    "expo-clipboard": "~3.0.1",
     "expo-constants": "~13.1.1",
     "expo-font": "~10.1.0",
     "expo-linking": "~3.1.0",
@@ -35,12 +38,14 @@
     "react-native": "0.68.2",
     "react-native-gesture-handler": "~2.2.1",
     "react-native-modal": "^13.0.1",
+    "react-native-pager-view": "^5.4.25",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-responsive-linechart": "^5.7.1",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-svg": "12.3.0",
     "react-native-switch-toggle": "^2.2.1",
+    "react-native-tab-view": "^3.1.1",
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
