--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-element-dropdown": "^2.1.0",
     "react-native-gesture-handler": "~2.2.1",
     "react-native-modal": "^13.0.1",
     "react-native-pager-view": "^5.4.25",
