--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@expo-google-fonts/inter": "^0.2.2",
     "@expo/vector-icons": "^13.0.0",
     "@react-native-clipboard/clipboard": "^1.10.0",
+    "@react-native-community/datetimepicker": "6.1.2",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/material-top-tabs": "^6.2.2",
     "@react-navigation/native": "^6.0.2",
@@ -31,6 +32,7 @@
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
     "expo-system-ui": "~1.2.0",
+    "expo-updates": "~0.13.4",
     "expo-web-browser": "~10.2.0",
     "iconsax-react-native": "^0.0.8",
     "react": "17.0.2",
