--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "react-native-element-dropdown": "^2.1.0",
     "react-native-gesture-handler": "~2.2.1",
     "react-native-modal": "^13.0.1",
-    "react-native-pager-view": "^5.4.25",
+    "react-native-pager-view": "5.4.15",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-responsive-linechart": "^5.7.1",
     "react-native-safe-area-context": "4.2.4",
