--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "expo-clipboard": "~3.0.1",
     "expo-constants": "~13.1.1",
     "expo-font": "~10.1.0",
+    "expo-image-picker": "~13.1.1",
     "expo-linking": "~3.1.0",
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
@@ -41,6 +42,7 @@
     "react-native-element-dropdown": "^2.1.0",
     "react-native-gesture-handler": "~2.2.1",
     "react-native-modal": "^13.0.1",
+    "react-native-modal-datetime-picker": "^13.1.2",
     "react-native-pager-view": "5.4.15",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-responsive-linechart": "^5.7.1",
