--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-app-intro-slider": "^4.0.4",
     "react-native-element-dropdown": "^2.1.0",
     "react-native-gesture-handler": "~2.2.1",
     "react-native-modal": "^13.0.1",
