--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "expo-clipboard": "~3.0.1",
     "expo-constants": "~13.1.1",
     "expo-font": "~10.1.0",
+    "expo-haptics": "~11.2.0",
     "expo-image-picker": "~13.1.1",
     "expo-linking": "~3.1.0",
     "expo-splash-screen": "~0.15.1",
@@ -45,13 +46,15 @@
     "react-native-modal": "^13.0.1",
     "react-native-modal-datetime-picker": "^13.1.2",
     "react-native-pager-view": "5.4.15",
+    "react-native-reanimated": "~2.8.0",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-responsive-linechart": "^5.7.1",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
-    "react-native-svg": "12.3.0",
+    "react-native-svg": "^12.1.1",
     "react-native-switch-toggle": "^2.2.1",
     "react-native-tab-view": "^3.1.1",
+    "react-native-wagmi-charts": "^2.1.0",
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
