--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "expo": "~45.0.0",
     "expo-app-loading": "^2.0.0",
     "expo-asset": "~8.5.0",
+    "expo-barcode-scanner": "~11.3.0",
     "expo-clipboard": "~3.0.1",
     "expo-constants": "~13.1.1",
     "expo-font": "~10.1.0",
     "expo-haptics": "~11.2.0",
     "expo-image-picker": "~13.1.1",
     "expo-linking": "~3.1.0",
+    "expo-local-authentication": "~12.2.0",
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
     "expo-system-ui": "~1.2.0",
@@ -51,6 +53,7 @@
     "react-native-responsive-linechart": "^5.7.1",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
+    "react-native-shadow-2": "^7.0.5",
     "react-native-svg": "^12.1.1",
     "react-native-switch-toggle": "^2.2.1",
     "react-native-tab-view": "^3.1.1",
