--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "react-native-reanimated": "~2.8.0",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-responsive-linechart": "^5.7.1",
-    "react-native-safe-area-context": "4.2.4",
+    "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "~3.11.1",
     "react-native-shadow-2": "^7.0.5",
     "react-native-svg": "^12.1.1",
