--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-native-toast-message": "^2.1.5",
     "react-native-wagmi-charts": "^2.1.0",
     "react-native-web": "0.17.7",
+    "react-native-webview": "11.18.1",
     "react-redux": "^8.0.4"
   },
   "devDependencies": {
