--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "expo-font": "~10.1.0",
     "expo-haptics": "~11.2.0",
     "expo-image-picker": "~13.1.1",
+    "expo-linear-gradient": "~11.3.0",
     "expo-linking": "~3.1.0",
     "expo-local-authentication": "~12.2.0",
     "expo-splash-screen": "~0.15.1",
