--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "expo-updates": "~0.13.4",
     "expo-web-browser": "~10.2.0",
     "iconsax-react-native": "^0.0.8",
+    "lottie-react-native": "5.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
