--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-native": "0.68.2",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-element-dropdown": "^2.1.0",
+    "react-native-expo-metamap-sdk": "^1.7.6",
     "react-native-gesture-handler": "~2.2.1",
     "react-native-modal": "^13.0.1",
     "react-native-modal-datetime-picker": "^13.1.2",
