--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-clipboard/clipboard": "^1.10.0",
-    "@react-native-community/datetimepicker": "6.1.2",
+    "@react-native-community/datetimepicker": "6.5.2",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/material-top-tabs": "^6.2.2",
     "@react-navigation/native": "^6.0.2",
@@ -26,59 +26,58 @@
     "@reduxjs/toolkit": "^1.8.5",
     "axios": "^0.27.2",
     "currency-to-abbreviation": "^2.0.1",
-    "expo": "~45.0.0",
-    "expo-app-loading": "^2.0.0",
-    "expo-asset": "~8.5.0",
-    "expo-barcode-scanner": "~11.3.0",
-    "expo-clipboard": "~3.0.1",
-    "expo-constants": "~13.1.1",
-    "expo-font": "~10.1.0",
-    "expo-haptics": "~11.2.0",
-    "expo-image-picker": "~13.1.1",
-    "expo-linear-gradient": "~11.3.0",
-    "expo-linking": "~3.1.0",
-    "expo-local-authentication": "~12.2.0",
-    "expo-splash-screen": "~0.15.1",
-    "expo-status-bar": "~1.3.0",
-    "expo-system-ui": "~1.2.0",
-    "expo-updates": "~0.13.4",
-    "expo-web-browser": "~10.2.0",
+    "expo": "^47.0.0",
+    "expo-app-loading": "~2.1.1",
+    "expo-asset": "~8.6.2",
+    "expo-barcode-scanner": "~12.1.0",
+    "expo-clipboard": "~4.0.1",
+    "expo-constants": "~14.0.2",
+    "expo-font": "~11.0.1",
+    "expo-haptics": "~12.0.1",
+    "expo-image-picker": "~14.0.2",
+    "expo-linear-gradient": "~12.0.1",
+    "expo-linking": "~3.2.3",
+    "expo-local-authentication": "~13.0.2",
+    "expo-splash-screen": "~0.17.5",
+    "expo-status-bar": "~1.4.2",
+    "expo-system-ui": "~2.0.1",
+    "expo-updates": "~0.15.6",
+    "expo-web-browser": "~12.0.0",
     "iconsax-react-native": "^0.0.8",
-    "lottie-react-native": "5.0.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-native": "0.68.2",
+    "lottie-react-native": "5.1.4",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "react-native": "0.70.5",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-element-dropdown": "^2.1.0",
     "react-native-expo-metamap-sdk": "^1.7.6",
-    "react-native-gesture-handler": "~2.2.1",
+    "react-native-gesture-handler": "~2.8.0",
     "react-native-modal": "^13.0.1",
     "react-native-modal-datetime-picker": "^13.1.2",
-    "react-native-pager-view": "5.4.15",
-    "react-native-reanimated": "~2.8.0",
+    "react-native-pager-view": "6.0.1",
+    "react-native-reanimated": "~2.12.0",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-responsive-linechart": "^5.7.1",
-    "react-native-safe-area-context": "^4.4.1",
-    "react-native-screens": "~3.11.1",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
     "react-native-shadow-2": "^7.0.5",
-    "react-native-svg": "^12.1.1",
     "react-native-switch-toggle": "^2.2.1",
     "react-native-tab-view": "^3.1.1",
     "react-native-toast-message": "^2.1.5",
     "react-native-wagmi-charts": "^2.1.0",
-    "react-native-web": "0.17.7",
-    "react-native-webview": "11.18.1",
+    "react-native-web": "~0.18.7",
+    "react-native-webview": "11.23.1",
     "react-redux": "^8.0.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@types/react": "^18.0.21",
-    "@types/react-dom": "^18.0.6",
-    "@types/react-native": "~0.66.13",
+    "@babel/core": "^7.19.3",
+    "@types/react": "~18.0.24",
+    "@types/react-dom": "~18.0.8",
+    "@types/react-native": "~0.70.6",
     "jest": "^26.6.3",
-    "jest-expo": "~45.0.0",
+    "jest-expo": "^47.0.0",
     "react-test-renderer": "17.0.2",
-    "typescript": "~4.3.5"
+    "typescript": "^4.6.3"
   },
   "resolutions": {
     "@types/react": "17.0.2",
