--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "expo-local-authentication": "~13.0.2",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
+    "expo-store-review": "~6.0.0",
     "expo-system-ui": "~2.0.1",
     "expo-updates": "~0.15.6",
     "expo-web-browser": "~12.0.0",
