--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
     "react-native-app-intro-slider": "^4.0.4",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-element-dropdown": "^2.1.0",
     "react-native-expo-metamap-sdk": "^1.7.6",
     "react-native-gesture-handler": "~2.8.0",
@@ -62,10 +63,10 @@
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-shadow-2": "^7.0.5",
+    "react-native-svg": "13.4.0",
     "react-native-switch-toggle": "^2.2.1",
     "react-native-tab-view": "^3.1.1",
     "react-native-toast-message": "^2.1.5",
-    "react-native-wagmi-charts": "^2.1.0",
     "react-native-web": "~0.18.7",
     "react-native-webview": "11.23.1",
     "react-redux": "^8.0.4"
